--- a/PhonesTestTemplate/pom.xml
+++ b/PhonesTestTemplate/pom.xml
@@ -4,4 +4,28 @@
   <artifactId>PhonesTestTemplate</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>PhonesTestTemplate</name>
+  
+  <dependencies>
+  	
+  	<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13</version>
+    <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-chrome-driver</artifactId>
+    <version>3.141.59</version>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-server</artifactId>
+    <version>3.141.59</version>
+    </dependency>
+	    
+   
+  </dependencies>
 </project>
